Scroll to top dark mode fixed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,6 +65,7 @@ html {
 
 html.dark .air-button, html.dark #scroll-top-button {
     filter: invert(1);
+    color: #000 !important;
 }
 
 .top-nav-menu {
